--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.19.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.8",
